--- a/index.html
+++ b/index.html
@@ -3,93 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GKDM Shop - Bán Acc Free Fire Uy Tín</title>
-  <link rel="stylesheet" href="style.css"/>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f7f7f7;
-    }
-    header {
-      background-color: #111;
-      color: white;
-      padding: 1em;
-      text-align: center;
-    }
-    nav {
-      background: #222;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      color: #ffcc00;
-    }
-    .container {
-      padding: 20px;
-      max-width: 960px;
-      margin: auto;
-    }
-    .section {
-      margin-bottom: 40px;
-    }
-    .top-nap {
-      background: white;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #ccc;
-    }
-    .top-nap h2 {
-      margin-top: 0;
-    }
-    footer {
-      background: #111;
-      color: white;
-      text-align: center;
-      padding: 1em;
-    }
-  </style>
+  <title>Shop Free Fire - GKDM</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
-    <h1>GKDM Shop</h1>
-    <p>Shop bán acc Free Fire uy tín - nạp tiền auto</p>
+    <img src="images/logo.png" alt="Logo Shop" class="logo">
+    <nav>
+      <a href="index.html">Trang Chủ</a>
+      <a href="naptien.html">Nạp Tiền</a>
+      <a href="admin.html">Admin</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">Trang Chủ</a>
-    <a href="mua-acc.html">Mua Acc</a>
-    <a href="naptien.html">Nạp Tiền</a>
-    <a href="topnap.html">Top Nạp</a>
-    <a href="admin.html">Admin</a>
-  </nav>
+  <section class="top-nap">
+    <h2>🔥 TOP NẠP</h2>
+    <ul id="top-nap-list">
+      <li>Nguyễn Văn A – 500k</li>
+      <li>Trần Thị B – 350k</li>
+      <li>Lê Văn C – 200k</li>
+    </ul>
+  </section>
 
-  <div class="container">
-    <div class="section">
-      <h2>Chào mừng đến với GKDM Shop</h2>
-      <p>Chúng tôi chuyên cung cấp tài khoản Free Fire chất lượng, giá rẻ. Giao dịch tự động và nhanh chóng.</p>
+  <section class="danh-muc">
+    <h2>🎮 Danh Mục ACC Free Fire</h2>
+    <div class="acc-list">
+      <div class="acc-item">
+        <img src="images/acc1.jpg" alt="Acc FF 1">
+        <p>Acc Free Fire #001</p>
+        <p>Giá: 100.000đ</p>
+      </div>
+      <div class="acc-item">
+        <img src="images/acc2.jpg" alt="Acc FF 2">
+        <p>Acc Free Fire #002</p>
+        <p>Giá: 150.000đ</p>
+      </div>
     </div>
-
-    <div class="section top-nap">
-      <h2>Top Nạp Gần Đây</h2>
-      <ol>
-        <li>🔥 Ngọc FF - 1.000.000đ</li>
-        <li>🔥 Tuấn Vip - 500.000đ</li>
-        <li>🔥 Dũng Pro - 300.000đ</li>
-      </ol>
-    </div>
-  </div>
+  </section>
 
   <footer>
-    <p>© 2025 GKDM Shop. All rights reserved.</p>
+    <p>&copy; 2025 GKDM Shop. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
